monitoring/uptime-kuma/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:alpine
          ports:
            - name: http
              containerPort: 3001
          volumeMounts:
            - mountPath: /app/data
              name: storage
          livenessProbe:
            exec:
              command:
                - node
                - extra/healthcheck.js
            initialDelaySeconds: 180
            periodSeconds: 60
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
          resources:
            requests:
              cpu: 300m
              memory: 256Mi
            limits:
              memory: 256Mi
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: uptime-kuma
