monitoring/uptime-kuma/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3001
      targetPort: http
      protocol: TCP
