monitoring/uptime-kuma/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  defaultBackend:
    service:
      name: uptime-kuma
      port:
        name: http
  tls:
    - hosts:
        - uptime.vandersleyen.dev
      secretName: example-tls
  rules:
    - host: uptime.vandersleyen.dev
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  name: http
